fix white gap in two sides layout in case of a small content page

--- a/td-documentation-reactjs/src/doc-elements/DocumentationLayout.css
+++ b/td-documentation-reactjs/src/doc-elements/DocumentationLayout.css
@@ -15,7 +15,6 @@
     overflow-y: scroll;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
 }
 
 .toc-panel {
